# pathetic

./: .gitignore  README.md  pathetic.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  RELEASING.md
tests/: test_pathetic.py
