[project]
name = "pathetic"
version = "0.1.0"
description = "A colorful CLI that visualizes system, environment, and PATH info with Rich."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.2.0",
    "click>=8.3.0",
]
license = { file = "LICENSE" }

[project.scripts]
ptc = "pathetic:main"
